# aikido

./: .gitignore  .readthedocs.yaml  Cargo.toml  Makefile  README.md  README.org  README.rst  TODO.md  development.txt  example.txt  goto.txt  install.sh  pets.rs  pyproject.yaml  requirements.txt  setup.py  tomb.yaml
.github/workflows/: main.yml
Formulas/: aikido.rb
data/: db.json
docs/source/: index.rst
etc/brew/: casks.txt  formulae.txt  formulas.txt  taps.txt
etc/brew/casks/android-sdk/: homepage  metadata.v2.json  version.installed
etc/brew/casks/android-studio/: metadata.v2.json  version.installed
etc/brew/casks/binary-ninja/: homepage  metadata.v2.json
etc/brew/casks/blackhole-2ch/: metadata.v2.json
etc/brew/casks/bluetility/: metadata.v2.json
etc/brew/casks/brave-browser/: metadata.v2.json  version.installed
etc/brew/casks/caffeine/: homepage  metadata.v2.json
etc/brew/casks/chrome-devtools/: metadata.v2.json
etc/brew/casks/chromedriver/: metadata.v2.json
etc/brew/casks/chromium/: metadata.v2.json
etc/brew/casks/discord/: metadata.v2.json
etc/brew/casks/emacs/: metadata.v2.json
etc/brew/casks/firefox/: homepage  metadata.v2.json
etc/brew/casks/gcc-aarch64-embedded/: homepage  metadata.v2.json
etc/brew/casks/gimp/: metadata.v2.json
etc/brew/casks/google-chrome/: metadata.v2.json
etc/brew/casks/google-cloud-sdk/: homepage  metadata.v2.json
etc/brew/casks/iterm2/: metadata.v2.json
etc/brew/casks/keepassxc/: metadata.v2.json
etc/brew/casks/libreoffice/: homepage  metadata.v2.json
etc/brew/casks/little-snitch/: homepage  metadata.v2.json
etc/brew/casks/macfuse/: homepage  metadata.v2.json
etc/brew/casks/mactex-no-gui/: homepage  metadata.v2.json  version.latest
etc/brew/casks/mame/: metadata.v2.json
etc/brew/casks/micro-snitch/: metadata.v2.json
etc/brew/casks/obsidian/: metadata.v2.json
etc/brew/casks/phoenix/: homepage  metadata.v2.json
etc/brew/casks/plugdata/: homepage  metadata.v2.json
etc/brew/casks/rar/: metadata.v2.json
etc/brew/casks/servo/: metadata.v2.json
etc/brew/casks/slack/: metadata.v2.json
etc/brew/casks/spectacle/: metadata.v2.json  version.latest
etc/brew/casks/spotify/: homepage  metadata.v2.json  version.installed
etc/brew/casks/telegram/: metadata.v2.json  version.installed
etc/brew/casks/typora/: metadata.v2.json
etc/brew/casks/vivaldi/: metadata.v2.json
etc/brew/casks/whatsapp/: metadata.v2.json
etc/brew/casks/wireshark/: metadata.v2.json
etc/brew/casks/xamarin-android/: homepage  metadata.v2.json
etc/brew/casks/xamarin-ios/: metadata.v2.json  version.installed
etc/brew/casks/xquartz/: metadata.v2.json
etc/brew/casks/zight/: homepage  metadata.v2.json  version.installed
etc/brew/casks/zoom/: metadata.v2.json  version.installed
etc/brew/formulae/abseil/: homepage  linked_keg  metadata.v1.json  metadata.v2.json  version.installed
etc/brew/formulae/ack/: metadata.v1.json  metadata.v2.json  version.installed
etc/brew/formulae/adwaita-icon-theme/: metadata.v1.json  metadata.v2.json  version.installed
etc/brew/formulae/aften/: metadata.v1.json  metadata.v2.json  version.installed
etc/brew/formulae/aom/: metadata.v1.json  (+2 more)
etc/home/: ackrc  ansible.cfg  gitconfig  gitignoreglobal  phoenix.js  pypirc
ki_aikido/: cli.py  license.py
libexec/: binaryninja  chr  chromium  col  digital-ocean  fetch-github-object  figlet4sh  fix-git-author  gcloud-burn-monies  gcloud-create-vm  gcloud-list-instances  gcloud-save-monies  gcloud-start-compute-vms  gcloud-stop-compute-vms  gcloud-vm-grant-ssh-access  git-backdate-commit  git-backup  git-commit-dated  git-ignore  git-ignore-timed  git-last-tag  git-local-remote  git-main-reset  git-mystash  git-purge-sensitive  git-readme  git-recommit-latest  git-repair-case  git-reset-unstaged-permissions  git-ss  git-takeout  git-virtualenv  github-markup-preview  gpg-decrypt-files  gpg-encrypt-files  gpg-quick-generate  gpg-search-keys  gq  iterm2  now  (+11 more)
maintenance/: brew-list.sh  formula.rb.j2  update-formula.py
src/: aes256.rs  app.rs  coconut.rs  config.rs  errors.rs  ipleak.rs  ironpunk.rs  lib.rs  logger.rs  mod.rs  obfuskate.rs  pets.rs  qread.rs  slugify-filenames.rs  takinglibaesforadrive.rs  tomb-cli.rs
src/aes256cbc/: mod.rs
src/aes256gcm/: mod.rs
src/brew/: mod.rs
src/brew/commands/: lib.rs
src/brew/models/: formula.rs  mod.rs
src/brew/templates/: macos.rb  mod.rs
src/cli/: mod.rs
src/core/: mod.rs
src/ioutils/: mod.rs
src/ironpunk/: base.rs  geometry.rs  mod.rs  route.rs  window.rs
src/pcap/commands/: mod.rs
src/pcap/models/: mod.rs  sockaddr.rs
src/progress/: mod.rs
src/routes/: app.rs  menu.rs
src/tomb/: app.rs  mod.rs  ui.rs
src/tomb/app/: application.rs  geometry.rs  logging.rs  menu.rs  mod.rs  navigation.rs  overlay.rs
tests/unit/: test_dummy.py
(+2992 files in other folders)
