[package]
name = "rustic-toolz"
version = "1.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["wrap_help"] }
regex = "1.5.4"
notify-rust = "4"
glob = "0.3.0"
slug = "0.1.4"
url = "2.2.2"
reqwest = { version = "0.11", features = ["json", "cookies", "stream", "deflate","gzip", "brotli"] }
walkdir = "2"
md5 = "*"
clipboard = "0.5.0"
#termion = { version = "1.5", optional = true }
crossterm = { version = "0.22", features=["serde"]}
mac-notification-sys = "0.3"
dirs = "4.0.0"
tui = {version = "0.16.0",features = ["crossterm", "serde"]}
tokio = { version = "1", features = ["full"] }
term-table = "1.3.2"
thiserror = "1.0"

#tokio = { version = "1", features = ["full"] }
indicatif = "0.17.0-beta.1"
#unwrap = "1.2.1"
console = "0.15.0"
rust-crypto = "0.2.36"
rand = {version = "0.8.4", features = ["std"]}

#rustc-serialize = "0.3.24"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rpassword = "5.0.1"
shellexpand = "2.1.0"
scrypt = { version = "0.2", default-features = false }
#bip39 = "1.0.1"
tiny-bip39 = "0.8.2"
dialoguer = "0.9.0"
fnmatch-regex = "0.1.0"
wasm-bindgen = "0.2.78"
chrono = {version = "0.4", features = ["serde", "wasmbind"]}

[dev-dependencies]
speculate = "0.1"
k9 = "0.11.1"

[lib]
name = "toolz"
path = "src/lib.rs"

[[bin]]
name = "slugify-filenames"
path = "src/slugify-filenames.rs"
bench = false

[[bin]]
name = "aes-256-cbc"
path = "src/aes256.rs"
bench = false

[[bin]]
name = "bip39"
path = "src/bip39.rs"
bench = false

[[bin]]
name = "ipleak"
path = "src/ipleak.rs"
bench = false

[[bin]]
name = "obfuskat3"
path = "src/obfuskate.rs"
bench = false

[[bin]]
name = "tomb"
path = "src/tomb-cli.rs"
bench = false


[[bin]]
name = "pets"
path = "src/pets.rs"
bench = false
