[package]
name = "aikido"
version = "0.0.2"
edition = "2021"
authors = ["Gabriel Falcão <gabriel@nacaolivre.org>"]
description = "Aikido is a set of tools for the self-defense of MacOS users"
license = "GPL-3.0-or-later"
# license-file = "COPYING"
documentation = "https://docs.rs/aikido"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = ["tests", "docs", ".venv", ".github", ".git"]

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
console = "0.15.7"
eui48 = { version = "1.1.0", features = ["serde_json", "serde", "serde_bytes", "disp_hexstring"] }
gitoxide = "0.27.0"
indicatif = "0.17.6"
mac_address = { version = "1.1.5", features = ["serde"] }
oui = "0.8.1"
pcap-parser = { version = "0.14.0", features = ["serialize", "data", "cookie-factory"] }
serde = { version = "1.0.179", features = ["derive", "alloc", "rc"] }
serde_json = { version = "1.0.104", features = ["alloc", "preserve_order", "float_roundtrip"] }
serde_yaml = "0.9.25"
shellexpand = { version = "3.1.0", features = ["path", "os_str_bytes", "full"] }
tera = "1.19.0"


[[bin]]
name = "aikido"
path = "src/cli/mod.rs"
bench = false

[lib]
name = "aikido"
path = "src/mod.rs"

[[bin]]
name = "slugify-filenames"
path = "src/slugify-filenames.rs"
bench = false

[[bin]]
name = "slug"
path = "src/slugify.rs"
bench = false

[[bin]]
name = "aes-256-cbc"
path = "src/aes256.rs"
bench = false

[[bin]]
name = "bip39"
path = "src/bip39.rs"
bench = false

[[bin]]
name = "ipleak"
path = "src/ipleak.rs"
bench = false

[[bin]]
name = "obfuskat3"
path = "src/obfuskate.rs"
bench = false
